Add 007 and many modifyings

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ secret/*
 006_Zero_DownTile_LEMP_ALB_ASG/.terraform/*
 006_Zero_DownTile_LEMP_ALB_ASG/terraform*
 006_Zero_DownTile_LEMP_ALB_ASG/.terraform*
+007_Random_string_and_Parameter_Store/.terraform/*
+007_Random_string_and_Parameter_Store/terraform*
+007_Random_string_and_Parameter_Store/.terraform*
