--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,15 @@ secret/*
 011_Create_modules/testings/aws_security_group/.terraform/*
 011_Create_modules/testings/aws_security_group/terraform*
 011_Create_modules/testings/aws_security_group/.terraform*
+011_Create_modules/testings/aws_web_2_regions_and_ga/.terraform/*
+011_Create_modules/testings/aws_web_2_regions_and_ga/terraform*
+011_Create_modules/testings/aws_web_2_regions_and_ga/.terraform*
 011_Create_modules/projects/create_network_dev_and_prod/.terraform/*
 011_Create_modules/projects/create_network_dev_and_prod/terraform*
 011_Create_modules/projects/create_network_dev_and_prod/.terraform*
+011_Create_modules/projects/create_web_servers_2_regions_ga/.terraform/*
+011_Create_modules/projects/create_web_servers_2_regions_ga/terraform*
+011_Create_modules/projects/create_web_servers_2_regions_ga/.terraform*
 012_Import_existing_resources/.terraform/*
 012_Import_existing_resources/terraform*
 012_Import_existing_resources/.terraform*
