--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,21 @@ secret/*
 012_Import_existing_resources/.terraform/*
 012_Import_existing_resources/terraform*
 012_Import_existing_resources/.terraform*
+013_Create_VPC_SG_Terragrunt/terraform_way/dev/vpc/.terraform/*
+013_Create_VPC_SG_Terragrunt/terraform_way/dev/vpc/terraform*
+013_Create_VPC_SG_Terragrunt/terraform_way/dev/vpc/.terraform*
+013_Create_VPC_SG_Terragrunt/terraform_way/dev/sg/.terraform/*
+013_Create_VPC_SG_Terragrunt/terraform_way/dev/sg/terraform*
+013_Create_VPC_SG_Terragrunt/terraform_way/dev/sg/.terraform*
+013_Create_VPC_SG_Terragrunt/terraform_way/prod/vpc/.terraform/*
+013_Create_VPC_SG_Terragrunt/terraform_way/prod/vpc/terraform*
+013_Create_VPC_SG_Terragrunt/terraform_way/prod/vpc/.terraform*
+013_Create_VPC_SG_Terragrunt/terraform_way/prod/sg/.terraform/*
+013_Create_VPC_SG_Terragrunt/terraform_way/prod/sg/terraform*
+013_Create_VPC_SG_Terragrunt/terraform_way/prod/sg/.terraform*
+013_Create_VPC_SG_Terragrunt/terraform_way/stage/vpc/.terraform/*
+013_Create_VPC_SG_Terragrunt/terraform_way/stage/vpc/terraform*
+013_Create_VPC_SG_Terragrunt/terraform_way/stage/vpc/.terraform*
+013_Create_VPC_SG_Terragrunt/terraform_way/stage/sg/.terraform/*
+013_Create_VPC_SG_Terragrunt/terraform_way/stage/sg/terraform*
+013_Create_VPC_SG_Terragrunt/terraform_way/stage/sg/.terraform*
